<resources>
    <string name="app_name">DelegadosApp</string>
    <string name="btn_reg">Registrarse</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="request_mail">E-mail:</string>
    <string name="request_pass">Contraseña:</string>
    <string name="registrarse">¿No tienes cuenta?</string>
    <string name="remember_pass">¿Has olvidado tu contraseña?</string>
    <string name="request_invitado">Entrar como </string>


    <!--string name=""></string-->
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="mail_example">alumno@alu.ulpgc.es</string>
    <string name="pass_example">************</string>
    <string name="reg">Regístrate</string>
    <string name="login">¿Ya tienes cuenta?</string>
    <string name="log">Iniciar Sesión</string>
    <string name="invitado">Acceder como</string>
    <string name="inv">Invitado</string>
    <string name="request_grado">Grado:</string>
    <string name="rem_pass">Recordar Contraseña</string>
    <string name="todo">TODO</string>

    <string-array name="grados">
        <item>Grado en Ingeniería Informática</item>
        <item>Grado en Ingeniería Mecánica</item>
        <item>Grado en Ingerniería de Datos</item>
        <item>Grado en Arquitectura</item>
        <item>Grado en Ingeniería Química</item>
        <item>Grado en Derecho</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="label_grado">Grado al que perteneces</string>
    <string name="contacto">Contacto</string>
    <string name="movil">Movil:</string>
</resources>