<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="118dp"
        android:src="@drawable/logo_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/lbl_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/request_mail"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/txt_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/light_black"
                android:ems="10"
                android:hint="@string/mail_example"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_white"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/lbl_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/request_pass"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/light_black"
                android:ems="10"
                android:hint="@string/pass_example"
                android:importantForAutofill="no"
                android:inputType="textPassword|textWebPassword"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_white"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/txt_pass3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/light_black"
                android:ems="10"
                android:hint="Repite la contraseña"
                android:importantForAutofill="no"
                android:inputType="textPassword|textWebPassword"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_white"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/lbl_grado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/request_grado"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spn_grados"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@color/dark_white" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="100dp"
                android:onClick="onClick_register"
                android:text="@string/btn_reg"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/registrarse_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:onClick="onClick_goToLogin"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/registrarse_btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/registrarse_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="110dp"
        android:onClick="onClick_goToLogin"
        android:text="@string/log"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registrarse_btn1"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/registrarse_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="4dp"
        android:onClick="onClick_goToInvite"
        android:text="@string/invitado"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/registrarse_btn2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/registrarse_btn3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="110dp"
        android:onClick="onClick_goToInvite"
        android:text="@string/inv"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/registrarse_btn1"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>